--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
           padding-right: 10px !important;
           padding-left: 10px !important;
         }
-
-      
       }
     </style>
 
@@ -152,7 +150,7 @@
                   >
                     <img
                       src="logo.png"
-                      alt="logo"
+                      alt="Logo"
                       style="padding: 0px 25px 25px 25px"
                     />
                     <p
@@ -245,7 +243,7 @@
                                 <img
                                   style="margin: 0 14px 0 0"
                                   src="icon-call.png"
-                                  alt=""
+                                  alt="Image-call"
                                 />
                               </td>
                               <td
@@ -268,6 +266,7 @@
                                     font-size: 14px;
                                     font-weight: 400;
                                     line-height: 18px;
+                                    text-decoration: none;
                                   "
                                   >+380 68 606 96 33</a
                                 >
@@ -294,7 +293,7 @@
                                 <img
                                   style="margin: 0 14px 0 0"
                                   src="icon-mail.png"
-                                  alt=""
+                                  alt="Image-mail"
                                 />
                               </td>
                               <td
@@ -316,6 +315,7 @@
                                     font-size: 14px;
                                     font-weight: 400;
                                     line-height: 18px;
+                                    text-decoration: none;
                                   "
                                   href="mailto:alina@alevelsoft.com"
                                   >alina@alevelsoft.com</a
@@ -343,7 +343,7 @@
                                 <img
                                   style="margin: 0 14px 0 0"
                                   src="icon-ln.png"
-                                  alt=""
+                                  alt="Image-LN"
                                 />
                               </td>
                               <td
@@ -365,6 +365,7 @@
                                     font-size: 14px;
                                     font-weight: 400;
                                     line-height: 18px;
+                                    text-decoration: none;
                                   "
                                   href="https://www.linkedin.com/in/alina-alevelsoft/"
                                   >Alina Shapovalova</a
@@ -377,7 +378,7 @@
                           <img
                             style="padding: 0px 0px 14px 0px"
                             src="logo-second.png"
-                            alt="logo"
+                            alt="Logo-Second"
                           />
                           <a
                             target="_blank"
@@ -388,6 +389,7 @@
                               font-size: 16px;
                               font-weight: 600;
                               line-height: 20px;
+                              text-decoration: none;
                             "
                             href="http://alevelsoft.com"
                             >alevelsoft.com</a
@@ -432,6 +434,7 @@
                               font-size: 14px;
                               font-weight: 600;
                               line-height: 11px;
+                              text-decoration: none;
                             "
                             href="http://https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ3tAM2Rrq8Zpg6pvt_1ZTz7c629qwklS7Jnev-1pyUy5DjpENMTT_YNB-6anDOcKQ8JNjm7IxSZ"
                             >Ready to take the next step?</a
